src/scss/brand.scss
/* HEADER STYLE */

@import '_variables';

.header {
  background-color: $red-two;
  display: flex;
  justify-content: space-between;
  height: 120px;
}

.header__logo-container {
  display: flex;
  align-items: center;
  max-width: 70%;
}

.header__logo {
  height: 95%;
  padding: 5px;;
}

.header__brand-text {
  color: $white-one;
  padding: $padding-normal;
  align-self: start;
}

.header__title {
  text-shadow: 0 0 15px black; 
  font-family: $font-family-secondary;;
  font-weight: 700;
  padding-bottom: 5px;
}

.header__brand-text p {
  text-shadow: 0 0 5px black;
  font-family: $font-family-secondary;;
}

@media screen and (max-width: 800px) {
  .header__logo-container {
    max-width: 90%;
  }
}

@media screen and (max-width: 550px) {
  h1 {
    font-size: 24px;
  }

  .header__brand-text p {
    font-size: 12px;
    line-height: .9rem;
  }
}

@media screen and (max-width: 400px) {
  .header__logo {
    height: 75%;
  }

  .header__title{
    font-size: 18px;
  }

  .header__brand-text{
    align-self: center;
    padding: 0 10px 0 0;

    p {
      font-size: 10px;
      line-height: .9rem;
    }
  } 

  h1 {
    font-size: 16px;
  }
}

